{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 15,
  "lineage": "1573de4d-2c35-d3e8-e28d-3725eb8c9fc1",
  "resources": [
    {
      "module": "module.alb_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/lbr-for-nginx/6c2db03d69f914c1/24e17af93910c6ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/lbr-for-nginx/6c2db03d69f914c1/24e17af93910c6ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/lbr-for-nginx/6c2db03d69f914c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/lbr-for-nginx/6c2db03d69f914c1/fc3f1a6174dcf5f9",
            "certificate_arn": "arn:aws:acm:us-east-1:255945442255:certificate/bc0fa40e-a1ee-4d06-a558-5a9a26511daa",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:targetgroup/nginx-tg/e28087c569844a20",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255945442255:listener/app/lbr-for-nginx/6c2db03d69f914c1/fc3f1a6174dcf5f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:255945442255:loadbalancer/app/lbr-for-nginx/6c2db03d69f914c1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm.aws_acm_certificate.cert"
          ]
        }
      ]
    }
  ]
}